--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,8 @@
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 kotlin.code.style=official
-kotlin.version=1.8.20
-compose.version=1.4.1
+kotlin.version=1.9.10
+compose.version=1.5.1
+ktor_version=2.3.5
+logback_version=1.4.11
+
+
