--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,6 @@ kotlin.version=1.9.10
 compose.version=1.5.1
 ktor_version=2.3.5
 logback_version=1.4.11
+org.jetbrains.compose.experimental.jscanvas.enabled=true
 
 
