Finish unit 9 of course DevExpert. Android with KMP

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,10 @@
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 kotlin.code.style=official
 kotlin.version=1.9.10
+agp.version=7.4.2
 compose.version=1.5.1
 ktor_version=2.3.5
-logback_version=1.4.11
+android.useAndroidX=true
 org.jetbrains.compose.experimental.jscanvas.enabled=true
-
+voyager_version=1.0.0-rc10
 
